--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <!--  Custom  -->
     <link rel="stylesheet" href="assets/css/style.css">
     <script data-ad-client="ca-pub-3860581683430485" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173161834-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-173161834-1');
+
+    </script>
+
 
 </head>
 
