--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script data-ad-client="ca-pub-3860581683430485" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <meta name="google-site-verification" content="ojg5pIMYrLGIllRYPFBPfWn8rFZT1MUOhR-5O-rwCcw" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173161834-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
