Added meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Life Insurance Corporation of India - Home</title>
+    <!--    Custom seo-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Mangal Murti Insurance Consultancy were setup in 2013 for guiding Policy Holders to secure there future. after gaining major experience policys and secure future plans we also do fixed deposits and life insurance for helping our customers to save there life by paying premium and pay nothing at hospitals.we are currently helping alot of our customers to secure thire future and through customers feedback we understand the need">
+    <meta content="Vishal Kachhela" name="author" />
+    <meta content="life insurance,lic of india,lic term plan, lic policy,policys,lic agent,lic besy plicy ,best lic policy,lic benefits,lic best term plan,lic plans,lic due date,lic,lic finance,lic fix deposit,Best Lic Agent Website,lic investment,lic jeevan saral,umang,lic branch,lic term plan lic login, lic best term plan,lic best return plan,lic calculator,lic career,lic customer login,lic claim settlement ratio,lic customer,lic children plan,lic customer care,lic claim,lic direct payment,lic due date,lic details,lic death claim,lic ado salary,lic development officer,lic e term" name="keywords" />
+    <meta property="og:description" content="Mangal Murti Insurance Consultancy were setup in 2013 for guiding Policy Holders to secure there future. after gaining major experience policys and secure future plans we also do fixed deposits and life insurance for helping our customers to save there life by paying premium and pay nothing at hospitals.we are currently helping alot of our customers to secure thire future and through customers feedback we understand the need" />
+    <meta property="og:image" content="https://vishalkachhela.com/assets/Images/LIC_LOGO_1.png" />
+    <meta property="og:title" content="Life Insurance Corporation of India[Agent] - Home" />
+    <!--   -->
+    <title>Life Insurance Corporation of India[Agent] - Home</title>
     <!--   Logo   -->
     <link rel="icon" href="assets/Images/LIC_LOGO_1.png" type="image/x-icon">
     <!--   Plugin -->
