--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <section class="home-video wow bounceInDown ">
         <div class="container-fluid">
             <video id="home-bg-video" poster="assets/Images/LIC_LOGO_1.png" autoplay muted loop>
-                <source src="assets/Videos/WhatsApp%20Video%202020-07-18%20at%201.17.04%20AM.mp4" type="video/mp4">
-                <source src="assets/Videos/WhatsApp%20Video%202020-07-18%20at%201.17.04%20AM.mp4" type="video/mp4">
+                <source src="assets/Videos/video%20new.mp4" type="video/mp4">
+                <source src="assets/Videos/video%20new.mp4" type="video/mp4">
             </video>
         </div>
     </section>
