--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <!--    Custom seo-->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1" />-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
     <meta name="description" content="Mangal Murti Insurance Consultancy were setup in 2013 for guiding Policy Holders to secure there future. after gaining major experience policys and secure future plans we also do fixed deposits and life insurance for helping our customers to save there life by paying premium and pay nothing at hospitals.we are currently helping alot of our customers to secure thire future and through customers feedback we understand the need">
     <meta content="Vishal Kachhela" name="author" />
     <meta content="life insurance,lic of india,lic term plan, lic policy,policys,lic agent,lic besy plicy ,best lic policy,lic benefits,lic best term plan,lic plans,lic due date,lic,lic finance,lic fix deposit,Best Lic Agent Website,lic investment,lic jeevan saral,umang,lic branch,lic term plan lic login, lic best term plan,lic best return plan,lic calculator,lic career,lic customer login,lic claim settlement ratio,lic customer,lic children plan,lic customer care,lic claim,lic direct payment,lic due date,lic details,lic death claim,lic ado salary,lic development officer,lic e term" name="keywords" />
@@ -21,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/animate.css">
     <!--  Custom  -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <script data-ad-client="ca-pub-3860581683430485" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <meta name="google-site-verification" content="ojg5pIMYrLGIllRYPFBPfWn8rFZT1MUOhR-5O-rwCcw" />
@@ -44,11 +48,12 @@
     <!--Begin : NavBar Section-->
     <section id="home">
 
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg  bg-dark fixed-top wow bounceInDown">
+        <div class="container-fluid mobile-nav">
+
+            <nav class="navbar navbar-expand-sm  bg-dark fixed-top wow bounceInDown">
                 <img src="assets/Images/logo.PNG" width="58px" class="img-responsive">
 
-                <a class="navbar-brand nav-link" href="index.html">Mangal Murti Insurance Consultancy</a>
+                <a class="navbar-brand nav-link mobile-nav1" href="index.html">Mangal Murti Insurance Consultancy</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><img src="assets/Images/open-menu.png" width="18px" height="18px" class="img-responsive"></span>
                 </button>
@@ -223,13 +228,7 @@
         </div>
     </section>
     <!-- /our product section-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- adsnavin -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3860581683430485" data-ad-slot="5279228405" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
 
-    </script>
     <!--Contact Us-->
     <section id="contact-us">
         <div class="container">
@@ -307,7 +306,14 @@
 
 
 
-    <!--CONTACT US SECTION-->
+    <!--End :CONTACT US SECTION-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- adsnavin -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3860581683430485" data-ad-slot="5279228405" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+
+    </script>
     <!--FOOTER-->
     <footer id="main-footer" class="py-5 mt-5">
         <div class="container">
