--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
 
     <meta name="description" content="Mangal Murti Insurance Consultancy were setup in 2013 for guiding Policy Holders to secure there future. after gaining major experience policys and secure future plans we also do fixed deposits and life insurance for helping our customers to save there life by paying premium and pay nothing at hospitals.we are currently helping alot of our customers to secure thire future and through customers feedback we understand the need">
     <meta content="Vishal Kachhela" name="author" />
-    <meta content="life insurance,lic of india,lic term plan, lic policy,policys,lic agent,lic besy plicy ,best lic policy,lic benefits,lic best term plan,lic plans,lic due date,lic,lic finance,lic fix deposit,Best Lic Agent Website,lic investment,lic jeevan saral,umang,lic branch,lic term plan lic login, lic best term plan,lic best return plan,lic calculator,lic career,lic customer login,lic claim settlement ratio,lic customer,lic children plan,lic customer care,lic claim,lic direct payment,lic due date,lic details,lic death claim,lic ado salary,lic development officer,lic e term" name="keywords" />
+    <meta name="Title" content="Top Number 1. Lic Agent" />
+    <meta content="life insurance,lic of india,lic term plan, lic policy,policys,lic agent,lic besy plicy ,best lic policy,lic benefits,lic best term plan,lic plans,lic due date,lic,lic finance,lic fix deposit,Best Lic Agent Website,lic investment,lic jeevan saral,umang,lic branch,lic term plan lic login, lic best term plan,lic best return plan,lic calculator,lic career,lic customer login,lic claim settlement ratio,lic customer,lic children plan,lic customer care,lic claim,lic direct payment,lic due date,lic details,lic death claim,lic ado salary,lic development officer,lic e term,List of Insurance Agents in India in Mangal Murti Insurance Consultancy , Reviews, Map, Address, Phone number, Contact Number, local, popular Insurance Agent in India, Insurance Agents in India,Mangal Murti Investments  , Mangal Murti Investments, Mangal Murti Investments  Comapny Profile, Mangal Murti Investments News,vishal kachhela,mangalmurtiinsuranceconsultancy,mangal murti insurance consultancy" name="keywords" />
+    <meta property="og:type" content="company" />
+    <meta property="og:site_name" content="vishal kachhela,mangal murti insurance consultancy" />
     <meta property="og:description" content="Mangal Murti Insurance Consultancy were setup in 2013 for guiding Policy Holders to secure there future. after gaining major experience policys and secure future plans we also do fixed deposits and life insurance for helping our customers to save there life by paying premium and pay nothing at hospitals.we are currently helping alot of our customers to secure thire future and through customers feedback we understand the need" />
     <meta property="og:image" content="https://vishalkachhela.com/assets/Images/LIC_LOGO_1.png" />
-    <meta property="og:title" content="Life Insurance Corporation of India[Agent] - Home" />
+    <meta property="og:title" content="Life Insurance Corporation of India[Agent] - Home-Top Agent" />
+    <meta property="og:url" content="https://www.vishalkachhela.com" />
     <!--   -->
-    <title>Life Insurance Corporation of India[Agent] - Home</title>
+    <!--    common-->
+    <meta name="rating" content="general" />
+    <meta name="resource-type" content="text/html" />
+    <meta name="distribution" content="Global" />
+    <meta name="Created By" content="vishal kachhela and mangal murti insurance consultancy" />
+    <meta name="geo.position" content="19.2394023;73.1627256" />
+    <meta name="geo.placename" content="Balumal Niwas,1st floor,tomar hospital,behind union bank,ulhasnagar-421001" />
+    <meta http-equiv="x-dns-prefetch-control" content="on">
+    <!--   /comm-->
+    <title>Life Insurance Corporation of India[Agent] - Home,lic policies</title>
     <!--   Logo   -->
     <link rel="icon" href="assets/Images/LIC_LOGO_1.png" type="image/x-icon">
     <!--   Plugin -->
@@ -51,7 +64,7 @@
         <div class="container-fluid mobile-nav">
 
             <nav class="navbar navbar-expand-sm  bg-dark fixed-top wow bounceInDown">
-                <img src="assets/Images/logo.PNG" width="58px" class="img-responsive">
+                <img src="assets/Images/logo.PNG" width="58px" class="img-responsive" alt="lic logo">
 
                 <a class="navbar-brand nav-link mobile-nav1" href="index.html">Mangal Murti Insurance Consultancy</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,19 +119,19 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/Images/Banner-1.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/Images/Banner-1.jpg" class="d-block w-100" alt="mangal murti insurance consultancy">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/Images/Banner-2new.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/Images/Banner-2new.jpg" class="d-block w-100" alt="mangal murti insurance consultancy">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/Images/Banner-3new.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/Images/Banner-3new.jpg" class="d-block w-100" alt="mangal murti insurance consultancy">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/Images/LIC-s-SIIP.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/Images/LIC-s-SIIP.jpg" class="d-block w-100" alt="mangal murti insurance consultancy">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/Images/Web_Banner.png" class="d-block w-100" alt="...">
+                    <img src="assets/Images/Web_Banner.png" class="d-block w-100" alt="mangal murti insurance consultancy">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
@@ -168,7 +181,7 @@
                         <div class="flip-box cus-flip">
                             <div class="flip-box-inner">
                                 <div class="flip-box-front">
-                                    <img class="cus-img" src="assets/Images/photo-shopf.png">
+                                    <img class="cus-img" src="assets/Images/photo-shopf.png" alt="vishal kachhela">
                                 </div>
                                 <div class="flip-box-back">
                                     <h5 class="text-center mtc lh-cus">I am <span class="cus-color">Vishal Kachhela</span><br>My Designation is LIC Agent,<br>I believe to Serve a Quality Service To Clients,<br>We Are Also Doing Health Insurance And Fixed Deposit.</h5>
@@ -192,17 +205,17 @@
             <div class="row my-5">
                 <div class="col-md-4 img-wrapper wow fadeInLeft">
                     <a href="assets/Images/image-1.jpg" title="Image First">
-                        <img src="assets/Images/image-1.jpg" class="img-fluid img-responsive" alt="Image 1">
+                        <img src="assets/Images/image-1.jpg" class="img-fluid img-responsive" alt="mangal murti insurance consultancy">
                     </a>
                 </div>
                 <div class="col-md-4 img-wrapper wow fadeInDown">
                     <a href="assets/Images/image-2.jpg" title="Image First">
-                        <img src="assets/Images/image-2.jpg" class="img-fluid img-responsive" alt="Image 1">
+                        <img src="assets/Images/image-2.jpg" class="img-fluid img-responsive" alt="mangal murti insurance consultancy">
                     </a>
                 </div>
                 <div class="col-md-4 img-wrapper wow fadeInRight">
                     <a href="assets/Images/image-3.jpg" title="Image First">
-                        <img src="assets/Images/image-3.jpg" class="img-fluid img-responsive" alt="Image 1">
+                        <img src="assets/Images/image-3.jpg" class="img-fluid img-responsive" alt="mangal murti insurance consultancy">
                     </a>
                 </div>
 
@@ -210,17 +223,17 @@
             <div class="row mt-5">
                 <div class="col-md-4 img-wrapper wow fadeInLeft">
                     <a href="assets/Images/image-4.jpg" title="Image First">
-                        <img src="assets/Images/image-4.jpg" class="img-fluid img-responsive" alt="Image 1">
+                        <img src="assets/Images/image-4.jpg" class="img-fluid img-responsive" alt="mangal murti insurance consultancy">
                     </a>
                 </div>
                 <div class="col-md-4 img-wrapper wow fadeInUp">
                     <a href="assets/Images/image-5.jpg" title="Image First">
-                        <img src="assets/Images/image-5.jpg" class="img-fluid img-responsive" alt="Image 1">
+                        <img src="assets/Images/image-5.jpg" class="img-fluid img-responsive" alt="vishal kachhela">
                     </a>
                 </div>
                 <div class="col-md-4 img-wrapper wow fadeInRight">
                     <a href="assets/Images/image-6.jpg" title="Image First">
-                        <img src="assets/Images/image-6.jpg" class="img-fluid img-responsive" alt="Image 1">
+                        <img src="assets/Images/image-6.jpg" class="img-fluid img-responsive" alt="vishal kachhela">
                     </a>
                 </div>
 
@@ -304,7 +317,8 @@
 
     </section>
 
-<div id="amzn-assoc-ad-74f64e1d-b95d-409a-842f-c355160ccbb2"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=74f64e1d-b95d-409a-842f-c355160ccbb2"></script>
+    <div id="amzn-assoc-ad-74f64e1d-b95d-409a-842f-c355160ccbb2"></div>
+    <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=74f64e1d-b95d-409a-842f-c355160ccbb2"></script>
 
     <!--End :CONTACT US SECTION-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
