--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
         </div>
 
     </section>
+    <script data-ad-client="ca-pub-3860581683430485" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <div id="amzn-assoc-ad-74f64e1d-b95d-409a-842f-c355160ccbb2"></div>
     <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=74f64e1d-b95d-409a-842f-c355160ccbb2"></script>
