--- a/index.html
+++ b/index.html
@@ -318,9 +318,10 @@
     </section>
     <script data-ad-client="ca-pub-3860581683430485" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <div id="amzn-assoc-ad-74f64e1d-b95d-409a-842f-c355160ccbb2"></div>
-    <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=74f64e1d-b95d-409a-842f-c355160ccbb2"></script>
-
+    <!--    <div id="amzn-assoc-ad-74f64e1d-b95d-409a-842f-c355160ccbb2"></div>-->
+    <!--    <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=74f64e1d-b95d-409a-842f-c355160ccbb2"></script>-->
+    <div id="amzn-assoc-ad-ed546aee-8335-403b-aef8-5a7b018bfb51"></div>
+    <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=ed546aee-8335-403b-aef8-5a7b018bfb51"></script>
     <!--End :CONTACT US SECTION-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- adsnavin -->
