--- a/index.html
+++ b/index.html
@@ -265,12 +265,39 @@
                 </div>
             </div>
         </div>
+        <!--        -->
+        <script type="text/javascript">
+            amzn_assoc_ad_type = "link_enhancement_widget";
+            amzn_assoc_tracking_id = "navin076-20";
+            amzn_assoc_linkid = "23b94b7518c2eac0eb01d1c1d2d4f98d";
+            amzn_assoc_placement = "";
+            amzn_assoc_marketplace = "amazon";
+            amzn_assoc_region = "US";
 
+        </script>
+        <script src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&MarketPlace=US"></script>
+        <script type="text/javascript">
+            amzn_assoc_placement = "adunit0";
+            amzn_assoc_search_bar = "true";
+            amzn_assoc_tracking_id = "navin076-20";
+            amzn_assoc_search_bar_position = "bottom";
+            amzn_assoc_ad_mode = "search";
+            amzn_assoc_ad_type = "smart";
+            amzn_assoc_marketplace = "amazon";
+            amzn_assoc_region = "US";
+            amzn_assoc_title = "Shop Related Products";
+            amzn_assoc_default_search_phrase = "mobile phones";
+            amzn_assoc_default_category = "All";
+            amzn_assoc_linkid = "2b5f7d0417fdc322c88bcb540308e55e";
+
+        </script>
+        <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+        <!--        -->
         <div class="container">
             <div class="row">
                 <div class="col-md-4 img-maps wow slideInRight">
-                    <iframe src="https://maps.google.com/maps?q=BK-35%2C%20Opp%20Tomar%20Nursing%20Home%3Cbr%3EBehind%20Union%20Bank%3Cbr%3E%20Ulhasnagar%20-%20421001&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
+                    <!--                    <iframe src="https://maps.google.com/maps?q=BK-35%2C%20Opp%20Tomar%20Nursing%20Home%3Cbr%3EBehind%20Union%20Bank%3Cbr%3E%20Ulhasnagar%20-%20421001&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3766.9936277124757!2d73.1609483147324!3d19.239109486994483!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be79419e71862e7%3A0x96073d2a87b795c6!2sTomar%20Nursing%20Home!5e0!3m2!1sen!2sin!4v1595513615559!5m2!1sen!2sin" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                 <div class="col-md-8 wow slideInRight">
                     <div class="card p-4 custom-card">
